Implement market summary redesign
